added return value

--- a/sdk/Faropt basic example notebook.ipynb
+++ b/sdk/Faropt basic example notebook.ipynb
@@ -430,9 +430,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Label': 'fstar',\n",
+       " 'Datapoints': [{'Timestamp': datetime.datetime(2020, 11, 19, 0, 22, tzinfo=tzlocal()),\n",
+       "   'Average': 2332.0,\n",
+       "   'Minimum': 2332.0,\n",
+       "   'Maximum': 2332.0,\n",
+       "   'Unit': 'None'}],\n",
+       " 'ResponseMetadata': {'RequestId': 'e9507a8f-b4fa-4bc7-b790-8eb59d8c6de2',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'e9507a8f-b4fa-4bc7-b790-8eb59d8c6de2',\n",
+       "   'content-type': 'text/xml',\n",
+       "   'content-length': '556',\n",
+       "   'date': 'Thu, 19 Nov 2020 00:22:37 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fo.get_metric_data('fstar')"
    ]
@@ -448,9 +471,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recipeid:1231bcba5df-952b-4afa-b059-8cd88cf80c17 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:0e840471-5208-4856-9791-ab7e2b5dddd2/source.zip | description:Numerical Optimization test v0-2-2 sdk | maintainer:FarOpt\n"
+     ]
+    }
+   ],
    "source": [
     "fo.list_recipes()"
    ]
@@ -475,11 +506,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Downloading recipe...\n",
+      "INFO:root:Configured job!\n",
+      "INFO:root:Submitting job\n",
+      "INFO:root:Submitted job! id: 2020-11-19-00-34-22-de560098-6cce-43f9-a655-6b0c9c8d1af2\n"
+     ]
+    }
+   ],
    "source": [
-    "fo.run_recipe(fo.get_recipe_id_from_description('cvrp_problem_test_sdk'))"
+    "fo.run_recipe(recipe_id='1231bcba5df-952b-4afa-b059-8cd88cf80c17')"
    ]
   },
   {
@@ -493,11 +535,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'faropt-s3bucketfbfa637e-jauzfgds5cug'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fo.bucket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fo.logs()"
+    "import boto3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3_client = boto3.client('s3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "from uuid import uuid4\n",
+    "eventid = datetime.now().strftime('%Y-%m-%d-%H-%M-%S')+'-'+str(uuid4())\n",
+    "response = s3_client.upload_file('/tmp/source.zip', fo.bucket,eventid+'/source.zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2020-11-19-00-51-05-c469d5bc-3f8f-495f-bd34-99954571dbb0'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eventid"
    ]
   },
   {
