--- a/sdk/Faropt basic example notebook.ipynb
+++ b/sdk/Faropt basic example notebook.ipynb
@@ -16,16 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found existing installation: faropt 0.2.1\n",
-      "Uninstalling faropt-0.2.1:\n",
-      "  Successfully uninstalled faropt-0.2.1\n"
+      "Found existing installation: faropt 0.2.3\n",
+      "Uninstalling faropt-0.2.3:\n",
+      "  Successfully uninstalled faropt-0.2.3\n"
      ]
     }
    ],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -43,13 +43,13 @@
      "output_type": "stream",
      "text": [
       "Obtaining file:///home/ec2-user/SageMaker/faroptsdk/faropt/sdk\n",
-      "Requirement already satisfied: boto3 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from faropt==0.2.1) (1.16.9)\n",
-      "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from boto3->faropt==0.2.1) (0.10.0)\n",
-      "Requirement already satisfied: botocore<1.20.0,>=1.19.9 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from boto3->faropt==0.2.1) (1.19.9)\n",
-      "Requirement already satisfied: s3transfer<0.4.0,>=0.3.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from boto3->faropt==0.2.1) (0.3.3)\n",
-      "Requirement already satisfied: urllib3<1.26,>=1.25.4; python_version != \"3.4\" in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from botocore<1.20.0,>=1.19.9->boto3->faropt==0.2.1) (1.25.10)\n",
-      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from botocore<1.20.0,>=1.19.9->boto3->faropt==0.2.1) (2.8.1)\n",
-      "Requirement already satisfied: six>=1.5 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.20.0,>=1.19.9->boto3->faropt==0.2.1) (1.14.0)\n",
+      "Requirement already satisfied: boto3 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from faropt==0.2.3) (1.16.9)\n",
+      "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from boto3->faropt==0.2.3) (0.10.0)\n",
+      "Requirement already satisfied: s3transfer<0.4.0,>=0.3.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from boto3->faropt==0.2.3) (0.3.3)\n",
+      "Requirement already satisfied: botocore<1.20.0,>=1.19.9 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from boto3->faropt==0.2.3) (1.19.9)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from botocore<1.20.0,>=1.19.9->boto3->faropt==0.2.3) (2.8.1)\n",
+      "Requirement already satisfied: urllib3<1.26,>=1.25.4; python_version != \"3.4\" in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from botocore<1.20.0,>=1.19.9->boto3->faropt==0.2.3) (1.25.10)\n",
+      "Requirement already satisfied: six>=1.5 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.20.0,>=1.19.9->boto3->faropt==0.2.3) (1.14.0)\n",
       "Installing collected packages: faropt\n",
       "  Running setup.py develop for faropt\n",
       "Successfully installed faropt\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -97,23 +97,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jobid:2020-11-18-16-48-56-348e3e9d-dcf4-46b9-94a9-459b905205a1 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-18-16-48-56-348e3e9d-dcf4-46b9-94a9-459b905205a1/source.zip\n",
-      "jobid:2020-11-18-17-41-15-c3193dd3-2b4b-4955-a515-d17eb21d23bd | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-18-17-41-15-c3193dd3-2b4b-4955-a515-d17eb21d23bd//tmp/source.zip\n",
-      "jobid:2020-11-18-16-29-07-7f3a69c9-02f3-4fc6-92b5-e447dfb50ce8 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-18-16-29-07-7f3a69c9-02f3-4fc6-92b5-e447dfb50ce8/source.zip\n",
-      "jobid:2020-11-18-17-16-30-18c2fba9-1bc4-4472-abde-56f7867b2669 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-18-17-16-30-18c2fba9-1bc4-4472-abde-56f7867b2669//tmp/source.zip\n",
-      "jobid:2020-11-18-17-14-04-6ef6081e-20c4-4a3c-b72e-918b380d419f | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-18-17-14-04-6ef6081e-20c4-4a3c-b72e-918b380d419f//tmp/source.zip\n",
-      "jobid:2020-11-19-00-12-16-d3276d63-326f-47a1-80fd-c08a6a7727c7 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-00-12-16-d3276d63-326f-47a1-80fd-c08a6a7727c7/source.zip\n",
-      "jobid:2020-11-18-17-14-37-420b2974-fbaa-489e-846d-9a6c4daacceb | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-18-17-14-37-420b2974-fbaa-489e-846d-9a6c4daacceb//tmp/source.zip\n",
-      "jobid:2020-11-18-17-59-01-9c4215a7-b083-43ca-bc71-8af6747ef73f | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-18-17-59-01-9c4215a7-b083-43ca-bc71-8af6747ef73f//tmp/source.zip\n",
-      "jobid:2020-11-18-23-05-52-46a9444b-91da-4ce2-8925-a8fdba4bdc8b | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-18-23-05-52-46a9444b-91da-4ce2-8925-a8fdba4bdc8b/source.zip\n",
-      "jobid:2020-11-19-00-18-37-79be4b5c-3e03-49cd-a507-ea8d0f3b8456 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-00-18-37-79be4b5c-3e03-49cd-a507-ea8d0f3b8456/source.zip\n"
+      "jobid:2020-11-19-16-12-39-f40754ac-aeee-4781-81a4-e6b0ae732cc3 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-16-12-39-f40754ac-aeee-4781-81a4-e6b0ae732cc3//tmp/source.zip\n",
+      "jobid:2020-11-19-23-40-04-a6daad22-dd0b-4ce9-9b46-a2ba876c670d | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-23-40-04-a6daad22-dd0b-4ce9-9b46-a2ba876c670d/source.zip\n",
+      "jobid:2020-11-19-16-12-26-8340d76f-78e6-44dc-aa63-da038c7462a1 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-16-12-26-8340d76f-78e6-44dc-aa63-da038c7462a1//tmp/source.zip\n",
+      "jobid:2020-11-19-02-35-06-e34e1328-3903-4c7b-b072-3322b3c519aa | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-02-35-06-e34e1328-3903-4c7b-b072-3322b3c519aa//tmp/source.zip\n",
+      "jobid:2020-11-19-02-13-14-797425e3-e156-4536-af4c-e74ad5f7a55b | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-02-13-14-797425e3-e156-4536-af4c-e74ad5f7a55b//tmp/source.zip\n",
+      "jobid:2020-11-19-02-27-22-2ce72664-e6f5-4214-9700-74ada5878578 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-02-27-22-2ce72664-e6f5-4214-9700-74ada5878578//tmp/source.zip\n",
+      "jobid:2020-11-19-23-23-22-f4fbff0e-0e3d-40df-9923-0d666fc22ee4 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-23-23-22-f4fbff0e-0e3d-40df-9923-0d666fc22ee4/source.zip\n",
+      "jobid:2020-11-19-02-12-25-1d0f1ad5-97cc-4eb3-899d-2c4aed094567 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-02-12-25-1d0f1ad5-97cc-4eb3-899d-2c4aed094567//tmp/source.zip\n",
+      "jobid:2020-11-19-02-15-47-bfaef866-853a-4638-9f10-0a44a0257433 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-02-15-47-bfaef866-853a-4638-9f10-0a44a0257433//tmp/source.zip\n",
+      "jobid:2020-11-19-04-32-01-333a984f-a498-449b-8dbf-ad169a27daf0 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-04-32-01-333a984f-a498-449b-8dbf-ad169a27daf0//tmp/source.zip\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -133,19 +133,44 @@
       "INFO:root:Downloading source...\n",
       "INFO:root:Configured job!\n",
       "INFO:root:Submitting job\n",
-      "INFO:root:Submitted job! id: 2020-11-19-00-21-13-5daa81db-16f6-4bee-a67d-3f90349f2c54\n"
+      "INFO:root:Submitted job! id: 2020-11-19-23-55-39-1221bcf8-e2ec-4b2a-a856-95eed4be17f5\n"
      ]
     }
    ],
    "source": [
-    "fo.run_s3_job(bucket='faropt-s3bucketfbfa637e-jauzfgds5cug',key='2020-11-18-16-52-47-53780b05-d849-4e2f-b70c-f62ef58baa83/source.zip')"
+    "fo.run_s3_job(bucket='faropt-s3bucketfbfa637e-jauzfgds5cug',key='2020-11-19-23-40-04-a6daad22-dd0b-4ce9-9b46-a2ba876c670d/source.zip')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROVISIONING\n",
+      "PROVISIONING\n",
+      "PROVISIONING\n",
+      "PROVISIONING\n",
+      "PROVISIONING\n",
+      "PENDING\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-39-49b5e8b90efe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/SageMaker/faroptsdk/faropt/sdk/faropt/__init__.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    123\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprimary_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0;34m'STOPPED'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 125\u001b[0;31m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprimary_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    126\u001b[0m             \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "fo.wait()"
    ]
@@ -256,11 +281,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recipeid:afe53d0b-96fe-48ad-b7af-0349a97d1c35 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug-stage | path:afe53d0b-96fe-48ad-b7af-0349a97d1c35/source.zip | description:Bin packing recipe | maintainer:FarOpt\n",
+      "recipeid:9a4ea9da-3b55-4fe9-bf5d-57489069b68d | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug-stage | path:9a4ea9da-3b55-4fe9-bf5d-57489069b68d/source.zip | description:Numerical Optimization | maintainer:FarOpt\n",
+      "recipeid:ae51a7d4-4b0d-4a94-9b13-1cfbe195956f | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-23-40-04-a6daad22-dd0b-4ce9-9b46-a2ba876c670d/source.zip | description:cvrp_problem_v1 | maintainer:Lab126\n",
+      "recipeid:af3ee472-231f-45c9-8170-85bdd050609d | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-23-40-04-a6daad22-dd0b-4ce9-9b46-a2ba876c670d/source.zip | description:cvrp_problem_1 | maintainer:Lab126\n",
+      "recipeid:00bfa554-cff9-47b3-86ac-38ca2d56da1c | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug-stage | path:00bfa554-cff9-47b3-86ac-38ca2d56da1c/source.zip | description:CVRP recipe with metrics | maintainer:FarOpt\n"
+     ]
+    }
+   ],
    "source": [
-    "fo.list_recipes(verbose=False)"
+    "fo.list_recipes(verbose=True)"
    ]
   },
   {
@@ -281,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,18 +334,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recipeid:afe53d0b-96fe-48ad-b7af-0349a97d1c35 | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug-stage | path:afe53d0b-96fe-48ad-b7af-0349a97d1c35/source.zip | description:Bin packing recipe | maintainer:FarOpt\n",
+      "recipeid:9a4ea9da-3b55-4fe9-bf5d-57489069b68d | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug-stage | path:9a4ea9da-3b55-4fe9-bf5d-57489069b68d/source.zip | description:Numerical Optimization | maintainer:FarOpt\n",
+      "recipeid:ae51a7d4-4b0d-4a94-9b13-1cfbe195956f | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-23-40-04-a6daad22-dd0b-4ce9-9b46-a2ba876c670d/source.zip | description:cvrp_problem_v1 | maintainer:Lab126\n",
+      "recipeid:d639a3c1-64bc-4168-8953-f8d34ef9633a | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-23-55-39-1221bcf8-e2ec-4b2a-a856-95eed4be17f5/source.zip | description:ga_problem_2 | maintainer:Faropt SDK user\n",
+      "recipeid:af3ee472-231f-45c9-8170-85bdd050609d | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug | path:2020-11-19-23-40-04-a6daad22-dd0b-4ce9-9b46-a2ba876c670d/source.zip | description:cvrp_problem_1 | maintainer:Lab126\n",
+      "recipeid:00bfa554-cff9-47b3-86ac-38ca2d56da1c | bucket:faropt-s3bucketfbfa637e-jauzfgds5cug-stage | path:00bfa554-cff9-47b3-86ac-38ca2d56da1c/source.zip | description:CVRP recipe with metrics | maintainer:FarOpt\n"
+     ]
+    }
+   ],
    "source": [
     "fo.list_recipes()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d639a3c1-64bc-4168-8953-f8d34ef9633a'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fo.get_recipe_id_from_description('ga_problem_2')"
    ]
